# SS24ASS_SDP

./: CMakeLists.txt
1/: 1-2.cpp
2/: 2-2.py
3/: 3-1.py  data_imu_experiment_01.json  data_imu_experiment_02.json  data_imu_experiment_03.json  data_imu_experiment_04.json  filtered.json  imuFilter.py  imuRotation.py  imuTranslation.py
3/code/: complex.py  imuFilter.py  imuRotation.py  imuTranslation.py
4/: 1.py  code0.txt  code1.txt  glonass.txt  gnss.m
5/: 1.cpp
6/: kd.h
6/kdtree/: CMakeLists.txt  kdtest.cc
6/kdtree/include/slam6d/: globals.icc  kd.h
7/normals-cpp/: CMakeLists.txt  calcNormals.cc  main.cpp  normals.cc  normals.h
8/icp-helper-cpp/: CMakeLists.txt
8/icp-helper-cpp/include/: generate.h  helper.h  point.h
8/icp-helper-cpp/newmat-10/: CMakeLists.txt  README
8/icp-helper-cpp/src/: generate.cc  helper.cc  simulateICP.cc
9/: calibration.json  calibration.yaml  example.py  useCalib.py
src/: 1-2.cpp  1-5.cpp  printSerialData.cpp  showCamera.cpp
